# pydantic-ai-autobrowser

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
src/: config.py  logging_setup.py  main.py  orchestrator.py  types.py
src/agents/: browser_agent.py  critique_agent.py  planner_agent.py
src/orchestrator/: __init__.py  engine.py  events.py  helpers.py  runner.py  state.py  workflow.py
src/services/: image_analyzer.py  screenshot_service.py
src/ui/: __init__.py  console.py
src/utils/: image_analysis.py  msg_parser.py  screenshot.py
tests/: test_orchestration_integration.py  test_workflow_helpers.py
