[project]
name = "auto-browser-demo2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.46.0",
    "logfire>=4.31.0",
    "pillow>=11.3.0",
    "pydantic-ai>=1.73.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
